	  are quickly dispatched as regular resources because they are not valid MmiUris.
	  The above change is specifically for the "img" resources, and just moved WebContent/img to 
	  WebContent/-/img and updated sparql.html.
	
	- sparql.html: enabled the "beta" logo, WebContent/-/img/mmior.jpg (previous alpha logo: mmior.png).
	
	
2010-08-26   1.9.95.alpha
	- AllegroGraph upgraded to 3.3
	
	 
2010-08-25   1.9.95.alpha
	- inf_rules.txt (used by OntGraphMem): fixed the symmetric rule:
		[sym:    (?p rdf:type owl:SymmetricProperty) (?a ?p ?b) -> (?b ?p ?a)]
	  It was previously indicating owl:Symmetric, which is incorrect.
	  NOTE: currently OntGraphMem is not used, so this change does not have any effect in the
	  current implementation; just did the change for consistency and eventual future enabling. 
	  
	- New AgSupport class (support for the AllegroGraph-based implementation of IOntGraph), with
	  the SUPPORTING_STATEMENTS previously located in AdminDispatcher.
	  
	  AllegroGraph reasoner does not support owl:SymmetricProperty directly but it does support
	  owl:inverseOf [1]. So, noting that [2]:
	    (P owl:inverseOf P) iff (P rdf:type owl:SymmetricProperty),
	  the statements here related with symmetric properties have been adjusted to use owl:inverseOf. 
	  
	  However, (P owl:inverseOf P) is not processed by AG, which seem to be a bug. I've reported
	  this to the AG people.
	  
	  [1] http://www.franz.com/agraph/allegrograph/doc/reasoner-tutorial.html
	  [2] http://www.slideshare.net/ontotext/two-reasonable-views-to-the-web-of-linked-data (slide 11)
	  
	  
	- Added "nt", and "ttl" to the list of possible output formats (besides "rdf", "owl", "n3", etc).
	  TODO: however, this is just partially implemented!
	  
	  
2010-08-24   1.9.95.alpha
	- AdminDispatcher: added rules for the SKOS namespace "http://www.w3.org/2004/02/skos/core#"
	  (ie. along with rules to the previous "http://www.w3.org/2008/05/skos#").
	
	
2010-08-18   1.9.95.alpha